--- a/trabalho/pages/historia.html
+++ b/trabalho/pages/historia.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>Imagem ao lado do texto</title>
+    <title>AMBEV</title>
     <link rel="stylesheet" href="/css/style.css">
 
     <title>Home</title>
@@ -25,16 +25,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/pages/sobre.html">Sobre</a>
+                        <a class="nav-link active" aria-current="page" href="/pages/sobre.html">SOBRE</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/pages/historia.html">História</a>
+                        <a class="nav-link active" aria-current="page" href="/pages/historia.html">HISTÓRIA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="pages/cu"></a>/Cultura</a>
+                        <a class="nav-link active" aria-current="page" href="/pages/Culturas.html">CULTURA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/pages/faleconosco.html">Fale Conosco</a>
+                        <a class="nav-link active" aria-current="page" href="/pages/faleconosco.html">FALE CONOSCO</a>
                     </li>
             </div>
         </div>
@@ -42,100 +42,104 @@
 
     <main>
 
-        <div class="container row">
-            <div class=" col-6">
-                <div class="row">
-                    <div class="col">
-                    <img class="m-2" src="/images/Ambe2.jpeg" width="100px" height="200px"  alt=""></img>
-                    </div>
-                    <div class="col">
-                        <img class="m-2" src="/images/Ambe2.jpeg" width="100px" height="200px"  alt=""></img>
-                        </div>
-                </div>
-
-            </div>
-            <div class="col-6">
-
+        <div class="container">
+            <section class="corpo">
 
                 <section class="corpo">
+
                     <p> Uma história de sucesso que ainda está sendo escrita:
                     </p>
                     <div class="texto">
+                        <img src="/images/1fabrica.jpeg" width="500px" alt="">
+                        <img src="/images/criadoresambev.jpeg" width="400px" alt="">
+                        <img src="/images/nossa-historia-1885.jpeg" width="500px" alt="">
                         <p> A Ambev foi criada em 1999 no Brasil. Mas para que você conheça melhor a sua história,
                             precisaremos voltar na década de 1880. Nessa época, as cervejarias da Brahma e da Antarctica
                             foram criadas e seus produtos dominaram o mercado nas décadas seguintes. Mas foi a fusão
                             dessas
                             duas grandes empresas que deu origem à Ambev que conhecemos hoje.
-
+                        </p>
+                        <p>
                             A união de forças e objetivos em comum, já que se tratava de duas grandes cervejarias
                             brasileiras, resultou em uma única empresa, que tinha a inovação como lema principal. Os
                             empreendedores de sucesso Jorge Paulo Lemann, Marcel Herrmann Telles e Carlos Alberto
                             Sicupira
                             foram os fundadores da Ambev, que tinha sua sede na cidade de São Paulo.
-
-                            Desde o início da gestão desses três visionários, decidiu-se que a empresa iria priorizar o
-                            bom
-                            desempenho para que todas as metas, principalmente as financeiras, fossem atingidas. A visão
-                            de
-                            negócios dos seus administradores era invejável e, em pouco tempo, fez a Ambev se tornar
-                            referência do mercado de bebidas.
-
+                        </p>
+                        Desde o início da gestão desses três visionários, decidiu-se que a empresa iria priorizar o
+                        bom
+                        desempenho para que todas as metas, principalmente as financeiras, fossem atingidas. A visão
+                        de
+                        negócios dos seus administradores era invejável e, em pouco tempo, fez a Ambev se tornar
+                        referência do mercado de bebidas.
+                        <p>
                             Inovação e planejamento sempre fizeram parte da Ambev
                             Assim que a promissora Ambev foi criada, os sócios logo notaram a urgente necessidade de
                             oferecer uma gama maior de produtos dentro do mercado de bebidas e que tivessem preços
                             acessíveis aos consumidores. Tudo isso, claro, sem abrir mão da qualidade e tradição das
                             marcas
+                        </p>
+                        <p>
                             já conhecidas pelos brasileiros.
-
+                        </p>
+                        <p>
                             A inovação sempre fez parte da mente dos administradores da gigante Ambev. Quanto mais
                             opções de
                             produtos ela oferecesse aos consumidores, melhor para todos. As vendas iriam aumentar
                             bastante,
                             bem como todo o faturamento.
-
+                        </p>
+                        <p>
                             Além disso, as compras seriam recorrentes, já que se tratava de um mercado cada vez mais
                             crescente. Trabalho com foco também pode ajudar no desenvolvimento pessoal.
-
+                        </p>
+                        <p>
                             Em 2004, a Ambev uniu forças com uma renomada cervejaria belga: a Interbrew. Foi quando
                             surgiu a
                             AB InBev. Juntas, essas duas cervejarias queriam dominar o mercado cervejeiro e de outras
                             bebidas em todo o mundo.
-
+                        </p>
+                        <p>
                             Mas se você está pensando que somente as cervejas é que são prioridade para a Ambev, está
                             enganado (a).
-
+                        </p>
+                        <p>
                             Aumento do portfólio de produtos e projetos sociais
                             Depois de muitos planejamento e estudo de mercado, pouco a pouco, a Ambev foi lançando novos
                             produtos, que acabaram caindo no gosto do consumidor brasileiro. Refrigerantes, água
                             mineral,
                             chás, sucos, isotônicos e energéticos, começaram a fazer parte do vasto catálogo de produtos
-                            da
-                            Ambev no início dos anos 2000.
-
+                            da Ambev no início dos anos 2000.
+                        </p>
+                        <p>
                             Mas para produzir todos esses produtos e diversos tipos de cerveja, foi preciso um árduo
                             planejamento, foco nos objetivos e tino para os negócios. Em meados de 2010, a Ambev já
                             estava
                             consolidada no mercado brasileiro e até em boa parte do mundo. Desde o início das operações,
                             modernas fábricas foram sendo construídas em diversas regiões do Brasil.
-
+                        </p>
+                        <p>
                             Essa espantosa velocidade de crescimento se deve a uma mistura de diversas qualidades
                             essenciais
                             de todo empreendedor que deseja ter sucesso no mundo dos negócios. Só para se ter uma ideia,
                             a
                             Ambev já é considerada a quarta maior cervejaria do mundo, mesmo com apenas 21 anos de
                             fundação.
-
+                        </p>
+                        <p>
                             Em 2017, a Ambev lançou um importante projeto social (Águas AMA), em que todo o lucro das
                             vendas
                             dessa marca de água mineral, seja em supermercados, bares ou restaurantes, é revertido para
                             diversas regiões carentes em Minas Gerais, Pernambuco e Bahia.
-
+                        </p>
+                        <p>
                             Os números impressionam até os mais céticos
                             Seja pelo agradável paladar ou pelo preço acessível, o fato é que os diversos produtos da
                             Ambev
                             conquistaram o Brasil, de norte a sul. Fique por dentro dos números dessa gigante e
                             surpreenda-se com tamanho crescimento:
-
+                        </p>
+                        <p>
                             35 mil colaboradores somente no Brasil e cerca de 50 mil em todo o mundo;
                             A Ambev mantém operações em 16 países, além do Brasil.
                             100 centros de distribuição;
@@ -150,14 +154,15 @@
                             10 marcas diferentes de refrigerantes são produzidas;
                             Isotônicos, água mineral e até chás gelados também fazem parte do portfólio dessa moderna
                             empresa.
+                        </p>
+                        <p>
                             Uma excelente gestão administrativa é a grande responsável por transformar a Ambev nesse
                             império
                             que se tornou hoje. Pelo visto, ainda existem muitos anos de sucesso para essa “jovem”
                             empresa.
                         </p>
-
                     </div>
-            </div>
+                </section>
             </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
